--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "validator": "^13.7.0"
   }
 }
